GNOME Bugzilla – Bug 710678
gvfsd-http assert failure in g_error_free()
Last modified: 2013-10-25 07:49:14 UTC
The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/gvfs/+bug/1210852 "#0 0x00007f6a20481f77 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56 resultvar = 0 pid = 3788 selftid = 3788
+ Trace 232659
similar bug in fedora reports: http://retrace.fedoraproject.org/faf/reports/108229/
Created attachment 257890 [details] [review] http: Set error to NULL to prevent crash on close
Review of attachment 257890 [details] [review]: Not sure the patch fix this bug, however at least doesn't break anything and it is good practice...
(In reply to comment #3) > Review of attachment 257890 [details] [review]: > > Not sure the patch fix this bug, however at least doesn't break anything and it > is good practice... Yeah, but since the traceback indicates "invalid pointer" at malloc.c called via g_error_free(), it seems possible that we're trying to free an invalid pointer *because* error was not set to NULL.
Pushed to master as 084a365 and stable as de8ad26. I'm going to close this for now. We can reopen it if there are further problems.