http: Set error to NULL to possibly prevent crash on close

https://bugzilla.gnome.org/show_bug.cgi?id=710678